# how-orc-bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile.dev  README.md  SCRATCH.md  justfile  mise.toml  skaffold.yaml
helm/: Chart.yaml  values-dev.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/templates/tests/: test-connection.yaml
k8s/: gateway.yaml
scripts/: dev_down.sh  dev_up.sh
src/: main.rs
src/error_handlers/: mod.rs  tracing.rs
src/handlers/: inline_query.rs  message.rs  mod.rs
