[package]
name = "how-orc-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
redis = "1.0.0-rc.3"
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "tracing"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5.7"
